# transformer_implementations

./: .gitignore  .uv.toml  Makefile  README.md  UV_MIGRATION.md  _quarto.yml  core.html  environment-arm.yml  index.html  index.ipynb  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
_docs/: robots.txt
_docs/notebooks/: README.md
_proc/: attention.ipynb  index.ipynb  pos_encoding.ipynb  tokenizers.ipynb  utils.ipynb
dataset/: bob_dylan_lyrics.csv
models/: model_0.1.pt  model_0.2.pt  model_0.3.pt
my_transformer/: _modidx.py  attention.py  components.py  core.py  datasets.py  model.py  position_encoding.py  tokenizers.py  utils.py
notebooks/: _quarto.yml  attention.ipynb  components.ipynb  core.ipynb  d3pm.ipynb  d3pm_test.ipynb  d3pm_trash.ipynb  dataset.ipynb  grpo_loss.ipynb  index.ipynb  model.ipynb  moe.ipynb  pos_encoding.ipynb  sedd.ipynb  sm_mamba.ipynb  test.ipynb  tests_runs.py  text_diffusion.ipynb  tokenizers.ipynb  utils.ipynb
notebooks/sedd_dylan_tokenizer/: tokenizer.json
notebooks/shakespare_tok/: merges.txt  vocab.json
notebooks/shakespare_tok_513/: merges.txt  vocab.json
notebooks/simple_dylan_tokenizer/: tokenizer.json
runs/my_gpt_0.3/: events.out.tfevents.1694964155.MacBook-Pro-de-Jean.local.94035.0  events.out.tfevents.1694964241.MacBook-Pro-de-Jean.local.94035.1
