[tool.poetry]
name = "transformer_implementations"
version = "0.1.0"
description = "an implementation of transformer components"
authors = ["Jean Kunz"]
readme = "README.md"
packages = [{ include = 'my_transformer' }]


[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6"
pydantic-settings = "^2"
graphviz = "^0"
seaborn = "^0"
matplotlib = "^3"
bokeh = "^3"
pandas = "^2"
nbdev = "^2"
torch = "^2"
tiktoken = "^0.5.1"
deepdiff = "^6.5.0"
transformers = "^4.34.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.3"
ipykernel = "^6.25.2"
pip = "^23.2.1"
install = "^1.3.5"
torch-tb-profiler = "^0"
ruff = "^0.3.3"
black = "^24.3.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = [
    "E402",
    "F841",
    "F401",
    "E302",
    "E305",
    "E501",
    "E265",
    "E401",
]

[tool.black]
line-length = 120


[tool.pytest.ini_options]
testpaths = ["notebooks"]
