[project]
name = "transformer_implementations"
version = "0.1.0"
description = "an implementation of transformer components"
authors = [
    {name = "Jean Kunz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic-settings>=2.0.0",
    "graphviz",
    "seaborn",
    "matplotlib>=3.0.0",
    "bokeh>=3.0.0",
    "pandas>=2.0.0",
    "nbdev>=2.0.0",
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
    "deepdiff>=6.5.0",
    "transformers>=4.0.0",
    "tensorboard>=2.0.0",
    "torch-tb-profiler>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "ipykernel>=6.0.0",
    "ruff",
    "black>=24.0.0",
    "icecream>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
extend-exclude = [
    "E402",
    "F841",
    "F401",
    "E302",
    "E305",
    "E501",
    "E265",
    "E401",
]

[tool.black]
line-length = 120


[tool.pytest.ini_options]
testpaths = ["notebooks"]
